style.css
/* ... */
.desktop-nav {
    display: none;
}
@media (min-width: 768px) { 
    .desktop-nav {
        display: flex;
        justify-content: center;
        align-items: center;
        height: 100%;
    }
    .desktop-nav > *:not(:last-child) { 
        display: flex;
        justify-self: center;
        align-content: center;
        height: 100%;
    }
}
.nav-link {
    color: #333333; 
    font-weight: 600; 
    height: 100%;
    transition-property: color;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 300ms;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    text-decoration: none;
    text-size-adjust: auto;
    padding: 0 16px;
}

.nav-link:hover {
    color: #056599; 
}
.header-controls {
    display: flex;
    align-items: center;
}
@media (min-width: 768px) {
    .header-controls {
        margin-right: 20%;
    }
}
.header-controls > *:not(:last-child) { 
    margin-right: 0px;
}

@media (min-width: 640px) { 
    .header-controls > *:not(:last-child) {
        display: flex;
        align-items: center;
        width: 100px;
        justify-content: space-around;
    }
}
.control-button {
    padding: 4px; 
    margin: 0rem;
    height: 100%;
    border-radius: 9999px; 
    color: #056599;
    font-weight: 600; 
    transition-property: background-color;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms; 
    background-color: transparent;
    border: transparent;
    cursor: pointer;
}
.control-button:hover {
    background-color: #e5e7eb; 
}
@media (max-width: 640px) {
    .control-button {
        display: flex;
        align-items: center;
        justify-content: center;
        height: 100%;
        margin: auto;
    }
}
.size-switcher  {
    position: relative;
    z-index: 50;
    justify-content: space-around;
    width: 80px;
    border-style: solid;
    border-radius: 40px;
    height: 100%;
    border-color: #056599;
    display: flex;
}
@media (max-width: 640px) {
    .size-switcher {
        display: flex;
        align-items: center;
        height: 48px;
        width: 120px;
        z-index: 40;
    }
    .size-switcher svg {
        width: 32px;
        height: 32px;
        display: flex;
    }
}
@media (min-width: 768px) and (max-width: 1366px) {
    .size-switcher {
        display: flex;
        align-items: center;
        height: 48px;
        width: 120px;
        z-index: 40;
    }
    .size-switcher svg {
        width: 32px;
        height: 32px;
        display: flex;
    }
}

.text-size-button {
    display: flex;
    flex-direction: column;
    font-size: 18px;
    justify-content: center;
    align-items: center;
    height: 100%;
    border-radius: 9999px; 
    color: #056599;
    font-weight: 600; 
    transition-property: background-color;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms; 
    background-color: transparent;
    border: transparent;
    cursor: pointer;
}

.lang-switch-button {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    font-size: 18px;
    color: #056599;
    font-weight: 600; 
    transition-property: background-color;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms; 
    background-color: transparent;
    border: transparent;
    cursor: pointer;


}
@media (max-width: 1330px) {
    .lang-switch-button{
        display: none;
    }
}
/*--------Mobile horizontal----------*/
@media (min-width: 640px) and (max-width: 767px) {
    .header-controls {
        display: none;
    }
    .mobile-menu-toggle-container {
        display: flex !important;    
        align-items: center;       
        margin-left: auto;        
    }
    .mobile-menu-toggle-container .lang-switch-button-mobile {
        margin-right: 0.5rem; 
    }
    .logo-container {
        margin-left: 0 !important;
    }
    .header-content {
        padding-left: 1rem !important; 
        padding-right: 1rem !important;
        box-sizing: border-box !important;
        justify-content: space-between;
    }
    .hero-section{
        min-height: 400px !important;
    }
}
/*------------------*/

/*--------Tablet optimized nav----------*/
@media (min-width: 640px) and (max-width: 767px) {
    .header-controls {
        display: none;
    }
    .mobile-menu-toggle-container {
        display: flex !important;    
        align-items: center;       
        margin-left: auto;        
    }
    .mobile-menu-toggle-container .lang-switch-button-mobile {
        margin-right: 0.5rem; 
    }
    .logo-container {
        margin-left: 0 !important;
    }
    .header-content {
        padding-left: 1rem !important; 
        padding-right: 1rem !important;
        box-sizing: border-box !important;
        justify-content: space-between;
    }
    .hero-section{
        min-height: 400px !important;
    }
}
/*------------------*/

.lang-switch-button-mobile {
    display: flex;
    font-size: 18px;
    padding: 0;
    align-items: center;
    justify-content: center;
    height: 64px;
    color: #056599;
    font-weight: 600; 
    transition-property: background-color;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms; 
    background-color: transparent;
    border: transparent;
}

@media (min-width: 640px) {
    .lang-switch-button {
        display: flex;
        align-items: end;
        color: #056599;
        font-weight: 600; 
        transition-property: background-color;
        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
        transition-duration: 150ms; 
        background-color: transparent;
        border: transparent;

    }
}

.control-button-icon {
    display: flex;
    align-content: end;
    justify-content: end;
    margin: 0;
    height: 100%; 
    width: 20px; 
}
/* ... */

